--- a/styles/new year.css
+++ b/styles/new year.css
@@ -7,6 +7,11 @@
     border-radius: 4px;
     margin: auto;
 }
+
+.container{
+    text-align: center;
+    color: #F00;
+}
 .title{
     width: 400;
     height: 100%;
@@ -48,12 +53,11 @@
 }
 .short{
     color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .div{
 
