--- a/styles/new year.css
+++ b/styles/new year.css
@@ -51,7 +51,7 @@
     line-height: normal;
 
 }
-.short{
+/* .short{
     color: #F00;
     text-align: center;
     font-size: 24px;
@@ -158,7 +158,7 @@
 }
 .container2{
     margin-top: 100px;
-}
+} */
 
 
 
